rm exception from registraion method